cmake_minimum_required(VERSION 3.14)
project(Lab_4)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab_4 main.cpp menu_item.h menu_item.cpp menu.h menu.cpp menu_manager.h menu_manager.cpp my_vector.h my_vector.cpp iterator.cpp iterator.h User.cpp User.h Models/Post/Worker.cpp Models/Post/Worker.h Models/Post/Client.cpp Models/Post/Client.h Models/Parcel/Parcel.cpp Models/Parcel/Parcel.h)